@@ -205,6 +205,11 @@ MainWidget::MainWidget(QWidget *parent,const char *name)
   else {
     openoffice_path=s.readEntry("/OpenOffice.org/"+key+"/Path");
   }
+  /*
+  openoffice_path="C:/Program Files/OpenOffice 4/program/soffice";
+#else
+  openoffice_path="soffice";
+  */
 #endif  // WIN32
 
   //
